lesson 8/my-http-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myhttpserver-gateway
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - myhttpserver.com
      secretName: my-http-server-tls
  rules:
    - host: myhttpserver.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: httpsvc
                port:
                  number: 80
